--- a/sentra/src/main/resources/application.properties
+++ b/sentra/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:h2:file:/data/demo
 #spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+server.port=8083
